<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moudjames23.coronanews.PhoneNumberActivity"
    tools:showIn="@layout/activity_phone_number">

    <com.moudjames23.coronanews.customs.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explication_numero"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:layout_margin="15dp" />



    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white">

            <com.moudjames23.coronanews.customs.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_number"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_margin="15dp">

                <com.moudjames23.coronanews.customs.TextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:text="@string/indicatif"
                    android:textSize="17sp"
                    android:layout_weight="1.1"
                    android:padding="8dp"
                    android:gravity="center"
                    android:background="@drawable/design_edittext" />

                <EditText
                    android:id="@+id/edt_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:background="@drawable/design_edittext"
                    android:hint="@string/hint_phone_number"
                    android:layout_weight="3.9" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/design_button"
                android:textColor="@android:color/white"
                android:layout_margin="15dp" />

            <Button
                android:id="@+id/btn_ignorer"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/ignorer"
                android:layout_gravity="right"
                android:background="@drawable/design_button2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>




