<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_infectes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/infecter"
                    android:orientation="horizontal">

                    <com.moudjames23.coronanews.customs.FontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@string/infect"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        font_view:custom_font="NunitoSans_Regular"/>

                    <com.moudjames23.coronanews.customs.FontTextView
                        android:id="@+id/tv_count_infecter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        font_view:custom_font="NunitoSans_Regular"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_infectes"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="8dp"

                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gueris"
                        android:orientation="horizontal">

                        <com.moudjames23.coronanews.customs.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:padding="5dp"
                            android:text="@string/gueris"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            font_view:custom_font="NunitoSans_Regular"/>

                        <com.moudjames23.coronanews.customs.FontTextView
                            android:id="@+id/tv_count_gueris"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:padding="5dp"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            font_view:custom_font="NunitoSans_Regular"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dead"
                        android:orientation="horizontal">

                        <com.moudjames23.coronanews.customs.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:padding="5dp"
                            android:text="@string/decede"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            font_view:custom_font="NunitoSans_Regular"/>

                        <com.moudjames23.coronanews.customs.FontTextView
                            android:id="@+id/tv_count_dead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:padding="5dp"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            font_view:custom_font="NunitoSans-Bold"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_marginTop="10dp" />

        </FrameLayout>





    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
